--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,4 @@
 {
-	"githubClientID" : "95113b0120e584254200",
-	"githubSecret" : "9906710b2836c3beb35b782e9c7687deeb2abc8f"
+	"facebookAppId" : "528639867185686",
+	"facebookSecret" : "c09068dec847d50514ca36a86c50f1ef"
 }
